Refactor error response
